force-app/main/default/objects/Maintenance_Service__c/Maintenance_Service__c.object-meta.xml
<CustomObject>
    <label>Maintenance Service</label>
    <nameField>
        <label>Maintenance Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Service</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>