force-app/main/default/objects/Maintenance_Service__c/fields/Maintenance_default__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This maintenance will be selected as default in approval process, if no service was on vehicle</description>
    <inlineHelpText>This maintenance will be selected as default in approval process, if no service was on vehicle</inlineHelpText>
    <label>Maintenance default</label>
    <type>Checkbox</type>
</CustomField>