force-app/main/default/objects/Maintenance_Service__c/fields/Maintenance_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Geolocation__c</fullName>
    <label>Maintenance Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>