force-app/main/default/objects/Maintenance_Service__c/fields/Maintenance_Service_Total__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Service_Total__c</fullName>
    <description>Show the total number of Maintenance records for each service</description>
    <label>Maintenance Service Total Reconrds</label>
    <summaryForeignKey>Maintenance__c.Maintenance_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>