force-app/main/default/objects/Maintenance_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Maintenance_Geolocation__Latitude__s</columns>
    <columns>Maintenance_Geolocation__Longitude__s</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Maintenance_Service_Total__c</columns>
    <columns>Maintenance_default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>