force-app/main/default/objects/Maintenance_Service__c/listViews/Service_operator_groupe_for_approval_pro_Maintenance_Service.listView-meta.xml
<ListView>
    <fullName>Service_operator_groupe_for_approval_pro_Maintenance_Service</fullName>
    <filterScope>Queue</filterScope>
    <label>Service operator groupe for approval pro</label>
    <queue>Service_operator_groupe_for_approval_pro</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>